appId: com.frandevea.odecloud
---
- clearKeychain
- launchApp
- assertVisible: 'Email'

- tapOn:
    id: email-input

- inputText:
    id: email-input
    text: lucasgoyeche@gmail.com

- tapOn:
    id: continue-button

- assertVisible: 'Password'

- tapOn:
    id: password-input

- inputText:
    id: password-input
    text: testing123MyPasswor$d

- tapOn:
    id: login-button
